# gc-proj2

./: CMakeLists.txt
src/: main.cpp
src/shaders/: shader.frag  shader.vert
src/utils/: Constants.cpp  Constants.h
src/utils/color/: Color.cpp  Color.h
src/utils/render/: ShadersUtils.cpp  ShadersUtils.h
